added photo, emails, and links to key sites

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-hello world
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Jackson Fox &amp; Erica Tsai</title>
+    <!--[if IE]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->                        
+    <style type="text/css">
+    body { font-size: 120%; text-align: center; }
+    a { text-decoration: none; }                                                                                                  
+    img { border: 10px solid #eee; height: 350px; }
+    </style>
+  </head>
+  <body>
+    <img src="jack-and-erica.jpg" alt="photo of jackson and erica" title="Jackson and Erica in Wilmington, NC (photo by Mitch Fox)">
+    <pre>                  
+Hi! Here's how you can find us these days...
+    
+<b>Jackson Fox:</b> 
+<a href="mailto:jacksonfox@gmail.com">jacksonfox@gmail.com</a>
+<a href="http://twitter.com/jacksonfox">http://twitter.com/jacksonfox</a>
+<a href="http://jacksonfox.org">http://jacksonfox.org</a>
+
+<b>Erica Tsai:</b> 
+<a href="mailto:etsai@lsu.edu">etsai@lsu.edu</a>
+<a href="http://www.duke.edu/~yet2/">http://www.duke.edu/~yet2/</a>   
+<a href="http://www.flickr.com/photos/panda_linda">http://www.flickr.com/photos/panda_linda</a>
+    </pre>
+  </body>
+</html>
