--- a/index.html
+++ b/index.html
@@ -27,5 +27,18 @@ Hi! Here's how you can find us these days...
 <a href="http://www.duke.edu/~yet2/">http://www.duke.edu/~yet2/</a>   
 <a href="http://www.flickr.com/photos/panda_linda">http://www.flickr.com/photos/panda_linda</a>
     </pre>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-99790-8']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </body>
 </html>
