Updated homepage links
Changed Erica's homepage link to http://ericatsai.com from old Duke website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Hi! Here's how you can find us these days...
 
 <b>Erica Tsai:</b> 
 <a href="mailto:etsai@lsu.edu">etsai@lsu.edu</a>
-<a href="http://www.duke.edu/~yet2/">http://www.duke.edu/~yet2/</a>   
+<a href="http://ericatsai.com/">http://ericatsai.com/</a>   
 <a href="http://www.flickr.com/photos/panda_linda">http://www.flickr.com/photos/panda_linda</a>
     </pre>
     <script type="text/javascript">
